<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_small">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/add_alarm"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_medium" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioButtonOne"
            android:paddingStart="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal">

            <RadioButton
                android:id="@+id/radioButtonOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/hour_one"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/radioButtonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/hour_two"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/radioButtonThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/hour_three"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_normal" />

            <RadioButton
                android:id="@+id/radioButtonFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_small"
                android:text="@string/hour_five"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_normal" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDelete"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_toStartOf="@+id/buttonOk"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/text_size_small" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOk"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_small"
                android:backgroundTint="@color/colorWhite"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/colorApp"
                android:textSize="@dimen/text_size_small" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>