<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorWhite"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textActive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/active"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/bg_divider" />

        <TextView
            android:id="@+id/textDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/done"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/bg_divider" />

        <TextView
            android:id="@+id/textExpired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/expired"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@drawable/bg_divider" />

        <TextView
            android:id="@+id/textPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_big"
            android:paddingBottom="@dimen/padding_normal"
            android:text="@string/period"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>